--- a/TarjetaCreditoApi/appsettings.json
+++ b/TarjetaCreditoApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "conexionDB": "data source= 192.168.1.55; initial catalog=pruebaserverbeca; user=server_beca; password=123*abc*456"
+    "conexionDB": "data source=localhost; initial catalog=tarjetasCredito; user=sa; password=123*abc*456"
   },
   "Logging": {
     "LogLevel": {
